# gi_beginner_tutorial-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
gi_test/: package.xml
rpm/: template.spec
