<package>
  <name>gi_test</name>
  <description>The gi_test package</description>
  <version>0.10.1</version>
  <author>ROS wiki</author>
  <maintainer email="rd@gi.ai">Rapha</maintainer>
  <license>GPL</license>
  <url>http://wiki.ros.com</url>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <!--<export> -->
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  <!-- </export> -->
</package>